# mixcloudscope

./: .gitignore  CMakeLists.txt  README.md  com.ubuntu.developer.boghison.mixcloud_scope.ini  manifest.json  manifest.json.in  mixcloud.application  mixcloud.provider  mixcloud.service
data/: CMakeLists.txt  com.ubuntu.developer.boghison.mixcloud_mixcloudscope.ini  mixcloud.svg~
data/oa/: mixcloud.provider
data/oa/mixcloud/: Main.qml
data/settings/: com.ubuntu.developer.boghison.mixcloud_scope-settings.ini
include/api/: client.h  config.h
include/scope/: query.h
mixcloud/: Main.qml
po/: CMakeLists.txt
src/: CMakeLists.txt  preview.cpp  preview.h  query.cpp  query.h  scope.cpp  scope.h  scopehelper.cpp  scopehelper.h
src/api/: client.cpp
src/scope/: preview.cpp  query.cpp  scope.cpp
