INCLUDE(FindGettext)

FIND_PROGRAM(GETTEXT_XGETTEXT_EXECUTABLE xgettext)

SET(DOMAIN "com.ubuntu.developer.boghison.mixcloud")
FILE(GLOB PO_FILES *.po)
FOREACH(PO_FILE ${PO_FILES})
 GET_FILENAME_COMPONENT(LANG ${PO_FILE} NAME_WE)
 GETTEXT_PROCESS_PO_FILES(${LANG} ALL PO_FILES ${PO_FILE})
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${LANG}.gmo
 DESTINATION ${CMAKE_INSTALL_PREFIX}share/locale/${LANG}/LC_MESSAGES
 RENAME ${DOMAIN}.mo)
ENDFOREACH(PO_FILE)
